[gd_scene load_steps=23 format=2]

[ext_resource path="res://media/image/details/circle50.png" type="Texture" id=1]
[ext_resource path="res://src/actor/Player.gd" type="Script" id=2]
[ext_resource path="res://src/actor/Circle.gd" type="Script" id=3]
[ext_resource path="res://src/actor/Hair.tscn" type="PackedScene" id=4]
[ext_resource path="res://media/audio/sfx/btn3.wav" type="AudioStream" id=5]
[ext_resource path="res://media/audio/sfx/Randomize105.wav" type="AudioStream" id=6]
[ext_resource path="res://media/audio/sfx/player_jump.wav" type="AudioStream" id=7]
[ext_resource path="res://media/audio/sfx/player_land.wav" type="AudioStream" id=8]
[ext_resource path="res://media/audio/sfx/Randomize104.wav" type="AudioStream" id=9]
[ext_resource path="res://media/audio/sfx/sfx4.wav" type="AudioStream" id=10]
[ext_resource path="res://media/audio/sfx/fallout3.wav" type="AudioStream" id=11]
[ext_resource path="res://media/audio/sfx/slap2.wav" type="AudioStream" id=12]
[ext_resource path="res://media/audio/sfx/jump3.wav" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 17 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 10 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprites/Root/Body:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprites/Root/Body:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprites/Root/Body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprites/Hands/Left:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprites/Hands/Left:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprites/Hands/Right:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Sprites/Hands/Right:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprites/Root/Body:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprites/Root/Body:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprites/Root/Body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprites/Hands/Left:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -35, -0.25, 0, 0.25, 0, -25, -0.25, 0, 0.25, 0, -35, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprites/Hands/Left:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprites/Hands/Right:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 35, -0.25, 0, 0.25, 0, 25, -0.25, 0, 0.25, 0, 35, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Sprites/Hands/Right:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprites/Root/Body:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprites/Root/Body:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprites/Root/Body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprites/Hands/Left:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -35, -0.25, 0, 0.25, 0, -35, -0.25, 0, 0.25, 0, -35, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprites/Hands/Left:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprites/Hands/Right:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 35, -0.25, 0, 0.25, 0, 35, -0.25, 0, 0.25, 0, 35, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Sprites/Hands/Right:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=9]
resource_name = "release"
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprites/Root/Body:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprites/Root/Body:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprites/Root/Body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprites/Hands/Left:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprites/Hands/Left:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprites/Hands/Right:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Sprites/Hands/Right:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
loop = true
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprites/Root/Body:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprites/Root/Body:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.2, 0, 0.2, 0, -15, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0, -15, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprites/Root/Body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.05, 0, 0.05, 0, -12, -0.05, 0, 0.05, 0, 0, -0.05, 0, 0.05, 0, 12, -0.05, 0, 0.05, 0, 0, -0.05, 0, 0.05, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprites/Hands/Left:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -25, -0.1, 0, 0.1, 0, -30, -0.25, 0, 0.25, 0, -25, -0.1, 0, 0.1, 0, -25, -0.25, 0, 0.25, 0, -25, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprites/Hands/Left:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 5, -0.1, 0, 0.1, 0, -10, -0.25, 0, 0.25, 0, 5, -0.1, 0, 0.1, 0, -25, -0.25, 0, 0.25, 0, 5, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprites/Hands/Right:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 25, -0.1, 0, 0.1, 0, 25, -0.25, 0, 0.25, 0, 25, -0.1, 0, 0.1, 0, 30, -0.25, 0, 0.25, 0, 25, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Sprites/Hands/Right:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 5, -0.1, 0, 0.1, 0, -25, -0.25, 0, 0.25, 0, 5, -0.1, 0, 0.1, 0, -10, -0.25, 0, 0.25, 0, 5, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 0.418182 ), 0.0, 0.581818, 0, 1, Vector2( 1, 1 ), 0.581818, 0.0, 1, 0 ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 20.0
height = 30.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
z_index = 50
z_as_relative = false
collision_layer = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BodyArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 2184

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
shape = SubResource( 2 )

[node name="Areas" type="Node2D" parent="."]

[node name="HitArea" type="Area2D" parent="Areas"]
position = Vector2( 55, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/HitArea"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.2
anims/RESET = SubResource( 6 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 7 )
anims/release = SubResource( 9 )
anims/walk = SubResource( 8 )
next/jump = "jump"

[node name="Sprites" type="Node2D" parent="."]

[node name="Root" type="Node2D" parent="Sprites"]
use_parent_material = true

[node name="Body" type="Node2D" parent="Sprites/Root"]
use_parent_material = true

[node name="Hair" type="Node2D" parent="Sprites/Root/Body"]
modulate = Color( 1, 0.890196, 0, 1 )
position = Vector2( 0, -25 )

[node name="Back" parent="Sprites/Root/Body/Hair" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 1 )
end_scale = 0.8

[node name="Front" parent="Sprites/Root/Body/Hair" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 1 )
position = Vector2( 0, -19.2 )
z_index = 1
width = 20.0
sitting_angle = 70.0
point_count = 6
tex = ExtResource( 1 )

[node name="Fit" type="Node2D" parent="Sprites/Root/Body"]
modulate = Color( 0.498039, 0, 1, 1 )

[node name="LegL" type="Line2D" parent="Sprites/Root/Body/Fit"]
position = Vector2( -5, -9.5 )
rotation = 0.387463
points = PoolVector2Array( 0, 0, 0, 26 )
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="LegR" type="Line2D" parent="Sprites/Root/Body/Fit"]
position = Vector2( 5, -9.5 )
rotation = -0.387463
points = PoolVector2Array( 0, 0, 0, 26 )
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="Torso" type="Line2D" parent="Sprites/Root/Body/Fit"]
position = Vector2( 0, -9.5 )
points = PoolVector2Array( 0, 0, 0, 20 )
width = 25.0
width_curve = SubResource( 13 )
default_color = Color( 1, 1, 1, 1 )

[node name="Head" type="Node2D" parent="Sprites/Root/Body"]
modulate = Color( 0.00784314, 1, 0, 1 )
position = Vector2( 0, -25 )
script = ExtResource( 3 )
radius = 20.0

[node name="Eyes" type="Node2D" parent="Sprites/Root/Body"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -31.5 )

[node name="Left" type="Line2D" parent="Sprites/Root/Body/Eyes"]
position = Vector2( -10, 0 )
points = PoolVector2Array( 0, 0, 0, 6 )
width = 8.0
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="Right" type="Line2D" parent="Sprites/Root/Body/Eyes"]
position = Vector2( 10, 0 )
points = PoolVector2Array( 0, 0, 0, 6 )
width = 8.0
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="Hands" type="Node2D" parent="Sprites"]
modulate = Color( 0, 1, 0, 1 )
z_index = 15

[node name="Left" type="Node2D" parent="Sprites/Hands"]
use_parent_material = true
position = Vector2( -25, 5 )
script = ExtResource( 3 )
radius = 7.5

[node name="Circle" type="Sprite" parent="Sprites/Hands/Left"]
visible = false
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Right" type="Node2D" parent="Sprites/Hands"]
use_parent_material = true
position = Vector2( 25, 5 )
script = ExtResource( 3 )
radius = 7.5

[node name="Circle" type="Sprite" parent="Sprites/Hands/Right"]
visible = false
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="SpriteArea" type="Area2D" parent="Sprites"]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/SpriteArea"]
position = Vector2( 0, -15 )
shape = SubResource( 14 )

[node name="Audio" type="Node2D" parent="."]
position = Vector2( 0, -17 )

[node name="Grab" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Drop" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
bus = "SFX"

[node name="Push" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "SFX"

[node name="Turn" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )
volume_db = -5.0
bus = "SFX"

[node name="Jump" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="Land" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="FallOut" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 11 )
bus = "SFX"

[node name="Spike" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 12 )
bus = "SFX"

[node name="Around" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 13 )
volume_db = -7.0
bus = "SFX"

[node name="Peek" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
volume_db = -7.0
bus = "SFX"

[connection signal="area_entered" from="BodyArea" to="." method="_on_BodyArea_area_entered"]
[connection signal="body_entered" from="BodyArea" to="." method="_on_BodyArea_body_entered"]
